# planty-backend

./: .gitignore  .travis.yml  Makefile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
.github/workflows/: build-pr.yml
config/: admin.py  urls.py
config/settings/: common.py  local.py  production.py  test.py
docker/dokku/: Dockerfile
docker/local/: Dockerfile.web
planty_content/: admin.py  apps.py  choices.py  models.py  serializers.py
planty_content/migrations/: 0001_create_wine_model.py  0002_create_sprout_model.py  0003_create_young_leaf_model.py  0004_create_grown_leaf_model.py  0005_create_grape_model.py  0006_create_berry_model.py  0007_create_twine_model.py  0008_create_properties_model.py  0009_create_phenology_model.py  0010_create_disease_model.py  0011_add_find_tree_node.py  0012_tree_node_data_migration.py  0013_remove_systematics.py  0014_auto_20210312_1053.py  0015_auto_20210312_1102.py  0016_remove_ger_name.py  0017_auto_20210329_1427.py  0018_add_shouldered_field.py  0019_auto_20210329_1435.py  0020_auto_20210329_1438.py  0021_auto_20210329_1454.py  0022_auto_20210330_1440.py  0023_auto_20210330_1451.py  0024_auto_20210330_1453.py  0025_auto_20210330_1508.py  0026_auto_20210330_1518.py  0027_auto_20210330_1523.py  0028_delete_ant_color.py  0029_auto_20210516_1544.py  0030_auto_20210516_1600.py  0031_auto_20210604_1954.py  0032_auto_20210608_1200.py  0032_auto_20210609_1821.py  0033_auto_20210609_1821.py  0034_auto_20221209_1205.py  (+3 more)
planty_plant_content/: admin.py  apps.py  models.py  serializers.py  test_models.py
(+35 files in other folders)
